--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"gulp-autoprefixer": "^8.0.0",
 		"gulp-babel": "^8.0.0",
 		"gulp-changed": "^4.0.2",
+		"gulp-include": "^2.4.1",
 		"gulp-load-plugins": "^2.0.7",
 		"gulp-plumber": "^1.2.1",
 		"gulp-rename": "^2.0.0",
