--- a/package.json
+++ b/package.json
@@ -25,18 +25,18 @@
 		"stile": "git+https://github.com/takty/stile.git#v3.x"
 	},
 	"dependencies": {
-		"@babel/core": "^7.15.0",
-		"@babel/preset-env": "^7.15.0",
+		"@babel/core": "^7.15.5",
+		"@babel/preset-env": "^7.15.4",
 		"eslint": "^7.32.0",
 		"gulp": "^4.0.2",
 		"gulp-autoprefixer": "^8.0.0",
 		"gulp-babel": "^8.0.0",
 		"gulp-changed": "^4.0.3",
+		"gulp-dart-sass": "^1.0.2",
 		"gulp-include": "^2.4.1",
 		"gulp-load-plugins": "^2.0.7",
 		"gulp-plumber": "^1.2.1",
 		"gulp-rename": "^2.0.0",
-		"gulp-sass": "^5.0.0",
 		"gulp-terser": "^2.0.1"
 	}
 }
